<resources>
    <string name="app_name">FSIPrototipo</string>
    <string name="action_user">Perfil</string>
    <string name="action_settings">Settings</string>
    <string name="action_discounts">Cupones</string>
    <string name="from">Origen</string>
    <string name="to">Destino</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="international_fragment_label">Viajes Internacionales</string>
    <string name="national_fragment_label">Viajes Nacionales</string>
    <string name="discounts_fragment_label">Descuentos</string>
    <string name="local_fragment_label">Viajes Locales</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>